--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="/logo.png">
     <meta name="description" content="Official Website">
     
-    <link rel="preload" href="/assets/css/0.styles.f119ea2f.css" as="style"><link rel="preload" href="/assets/js/app.69131adc.js" as="script"><link rel="preload" href="/assets/js/12.a49cad18.js" as="script"><link rel="prefetch" href="/assets/js/10.308f3211.js"><link rel="prefetch" href="/assets/js/11.3b663562.js"><link rel="prefetch" href="/assets/js/13.65c24f1e.js"><link rel="prefetch" href="/assets/js/14.7c23ea23.js"><link rel="prefetch" href="/assets/js/15.d509ebbb.js"><link rel="prefetch" href="/assets/js/16.cea4bcc0.js"><link rel="prefetch" href="/assets/js/17.97661b68.js"><link rel="prefetch" href="/assets/js/2.c3593e62.js"><link rel="prefetch" href="/assets/js/3.f2fda5b1.js"><link rel="prefetch" href="/assets/js/4.cac33d60.js"><link rel="prefetch" href="/assets/js/5.f2b75204.js"><link rel="prefetch" href="/assets/js/6.9002bb66.js"><link rel="prefetch" href="/assets/js/7.ad4444df.js"><link rel="prefetch" href="/assets/js/8.5f4ae7d7.js"><link rel="prefetch" href="/assets/js/9.5da3ac53.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.f119ea2f.css">
+    <link rel="preload" href="/assets/css/0.styles.cebb0caa.css" as="style"><link rel="preload" href="/assets/js/app.864ab08f.js" as="script"><link rel="preload" href="/assets/js/12.a49cad18.js" as="script"><link rel="prefetch" href="/assets/js/10.308f3211.js"><link rel="prefetch" href="/assets/js/11.5e658592.js"><link rel="prefetch" href="/assets/js/13.65c24f1e.js"><link rel="prefetch" href="/assets/js/14.52d01b1e.js"><link rel="prefetch" href="/assets/js/15.2a78373a.js"><link rel="prefetch" href="/assets/js/16.c4f1eb31.js"><link rel="prefetch" href="/assets/js/2.c3593e62.js"><link rel="prefetch" href="/assets/js/3.f2fda5b1.js"><link rel="prefetch" href="/assets/js/4.0d6a4e40.js"><link rel="prefetch" href="/assets/js/5.13f61d06.js"><link rel="prefetch" href="/assets/js/6.49b1e1bc.js"><link rel="prefetch" href="/assets/js/7.30403789.js"><link rel="prefetch" href="/assets/js/8.12ceaa0c.js"><link rel="prefetch" href="/assets/js/9.5dcdb981.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.cebb0caa.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.69131adc.js" defer></script><script src="/assets/js/12.a49cad18.js" defer></script>
+    <script src="/assets/js/app.864ab08f.js" defer></script><script src="/assets/js/12.a49cad18.js" defer></script>
   </body>
 </html>
