--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Cyber Security Enthusiast | Penetration Tester | Red Teamer">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.489d24ff.css" as="style"><link rel="preload" href="/assets/js/app.f24e2c35.js" as="script"><link rel="preload" href="/assets/js/10.23a08a59.js" as="script"><link rel="prefetch" href="/assets/js/11.6921380a.js"><link rel="prefetch" href="/assets/js/12.afc41e3d.js"><link rel="prefetch" href="/assets/js/13.78e0e7e0.js"><link rel="prefetch" href="/assets/js/14.947a5956.js"><link rel="prefetch" href="/assets/js/15.7a1f5b83.js"><link rel="prefetch" href="/assets/js/16.cf9fee51.js"><link rel="prefetch" href="/assets/js/2.2a395b45.js"><link rel="prefetch" href="/assets/js/3.06951db2.js"><link rel="prefetch" href="/assets/js/4.9dccd740.js"><link rel="prefetch" href="/assets/js/5.54adec9b.js"><link rel="prefetch" href="/assets/js/6.67793f9c.js"><link rel="prefetch" href="/assets/js/7.59830cd0.js"><link rel="prefetch" href="/assets/js/8.f8fbc6b3.js"><link rel="prefetch" href="/assets/js/9.9f464b50.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.489d24ff.css">
+    <link rel="preload" href="/assets/css/0.styles.739b8ed0.css" as="style"><link rel="preload" href="/assets/js/app.33d307ae.js" as="script"><link rel="preload" href="/assets/js/10.23a08a59.js" as="script"><link rel="prefetch" href="/assets/js/11.7f446b4d.js"><link rel="prefetch" href="/assets/js/12.b1d71614.js"><link rel="prefetch" href="/assets/js/13.85778b46.js"><link rel="prefetch" href="/assets/js/14.67074bcc.js"><link rel="prefetch" href="/assets/js/15.3f63e340.js"><link rel="prefetch" href="/assets/js/16.cf9fee51.js"><link rel="prefetch" href="/assets/js/2.2a395b45.js"><link rel="prefetch" href="/assets/js/3.06951db2.js"><link rel="prefetch" href="/assets/js/4.9dccd740.js"><link rel="prefetch" href="/assets/js/5.54adec9b.js"><link rel="prefetch" href="/assets/js/6.67793f9c.js"><link rel="prefetch" href="/assets/js/7.0f774108.js"><link rel="prefetch" href="/assets/js/8.f19a0032.js"><link rel="prefetch" href="/assets/js/9.bfde24ff.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.739b8ed0.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.f24e2c35.js" defer></script><script src="/assets/js/10.23a08a59.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.33d307ae.js" defer></script><script src="/assets/js/10.23a08a59.js" defer></script>
   </body>
 </html>
